# aliexpress-platform

./: .env  GLOBAL PROJECT STRUCTURE (ROOT).md  Makefile  README.md  commands_starting.md  docker-compose.observability.yml  docker-compose.yaml  docker-compose.yml  entrypoint.sh  main.py  manage.py  metrics  metrics.1  pyproject.toml  requirements.txt
Staff-Level-Structer/: STRUCTURE.md  aliexpress-clone-holy-grail.md
Staff-Level-Structer/21-12-2025/: accounts.md  admin_governence.md  checkout.md  coupons.md  inventory.md  notifications.md  payent.md  review_rating.md  search.md  shipping.md  starting_01_prodcuts_order_cart.md
Staff-Level-Structer/DB/: Untitled.sql  add_db.md  orders.md
Staff-Level-Structer/docs/adr/: README.md
Staff-Level-Structer/docs/architecture/: database-design.md  failure-and-chaos.md  full-database-design.md  team-repo-strategy.md
Staff-Level-Structer/domains/checkout/: README.md
Staff-Level-Structer/domains/domains/payments/: README.md
Staff-Level-Structer/domains/inventory/: README.md
Staff-Level-Structer/domains/notifications/: README.md
Staff-Level-Structer/domains/orders/: README.md
Staff-Level-Structer/domains/products/: README.md
Staff-Level-Structer/domains/promotions/: README.md
Staff-Level-Structer/domains/read_models/: README.md
Staff-Level-Structer/domains/shipping/: README.md
config/: asgi.py  urls.py  wsgi.py
config/settings/: base.py
core/domains/inventory/: apps.py
core/domains/orders/: apps.py
core/domains/orders/saga/: checkout_saga.py  checkout_saga_consumer.py
core/domains/payments/: apps.py
core/domains/products/: apps.py
core/domains/products/docs/: aggregate_identity.md
core/domains/products/migrations/: 0001_initial.py  0003_productmodel_status.py
core/domains/products/outbox/: product_outbox_model.py
core/domains/shipping/: apps.py
core/observability/prometheus/: prometheus.yml
core/shared/: __init__.py  apps.py
core/shared/adapters/http/: metrics_view.py
core/shared/admin/: outbox_admin.py
core/shared/contracts/: event_envelope.py
core/shared/infrastructure/: dlq_producer.py  event_bus.py  kafka_consumer.py  message_broker.py  outbox_processor.py  safe_consumer.py  tracing.py
core/shared/infrastructure/events/: event_envelope.py
core/shared/infrastructure/health/: base.py  db_health.py  health_service.py  kafka_health.py  redis_health.py  (+2 more)
core/shared/kernel/: base_aggregate.py  domain_event.py
core/shared/migrations/: 0001_initial.py  0002_outboxevent_published_at_outboxevent_retry_count_and_more.py  0003_alter_outboxevent_published_at_and_more.py  0004_outboxevent_processing_owner_and_more.py
core/shared/models/: __init__.py  outbox_event.py
data flow/: kafka-logs.md  one-one-run.md  products_json.json  runing.md
docker/django/: Dockerfile  entrypoint.sh
docker/elasticsearch/: Dockerfile
docker/kafka/: Dockerfile
docker/redis/: Dockerfile
docs/elestic-search/: es.md
man_pages/: testing_main_page.sh
scripts/: cleaner.py  post_products_data.py  run_tests.sh
(+66 files in other folders)
