[project]
name = "aliexpress-api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiohappyeyeballs==2.6.1",
    "aiohttp==3.13.2",
    "aiosignal==1.4.0",
    "anyio==4.12.0",
    "asgiref==3.11.0",
    "attrs==25.4.0",
    "certifi==2025.11.12",
    "charset-normalizer==3.4.4",
    "confluent-kafka==2.12.2",
    "django==6.0",
    "django-environ==0.12.0",
    "django-prometheus==2.4.0",
    "djangorestframework==3.16.1",
    "elastic-transport==9.2.0",
    "elasticsearch==9.2.0",
    "frozenlist==1.8.0",
    "googleapis-common-protos==1.72.0",
    "grpcio==1.76.0",
    "gunicorn==23.0.0",
    "idna==3.11",
    "importlib-metadata==8.7.1",
    "iniconfig==2.3.0",
    "kafka-python==2.3.0",
    "multidict==6.7.0",
    "opentelemetry-api==1.39.1",
    "opentelemetry-exporter-otlp==1.39.1",
    "opentelemetry-exporter-otlp-proto-common==1.39.1",
    "opentelemetry-exporter-otlp-proto-grpc==1.39.1",
    "opentelemetry-exporter-otlp-proto-http==1.39.1",
    "opentelemetry-instrumentation==0.60b1",
    "opentelemetry-proto==1.39.1",
    "opentelemetry-sdk==1.39.1",
    "opentelemetry-semantic-conventions==0.60b1",
    "packaging==25.0",
    "pluggy==1.6.0",
    "prometheus-client==0.23.1",
    "propcache==0.4.1",
    "protobuf==6.33.2",
    "psycopg2-binary==2.9.11",
    "pygments==2.19.2",
    "pytest==9.0.2",
    "python-dateutil==2.9.0.post0",
    "python-dotenv==1.2.1",
    "redis==7.1.0",
    "six==1.17.0",
    "sniffio==1.3.1",
    "sqlparse==0.5.5",
    "typing-extensions==4.15.0",
    "urllib3==2.6.2",
    "wrapt==1.17.3",
    "yarl==1.22.0",
    "zipp==3.23.0",
]
